<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Delivery_Crud_Op">


    <TextView
        android:id="@+id/tv_info"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/tv_info"
        android:textColor="#72A0C1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="297dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="297dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_phone"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="298dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <TextView
        android:id="@+id/tv_shippingAdd"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/tv_shippingAdd"
        android:textColor="#72A0C1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_ShippingAdd"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_shippingAdd"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shippingAdd" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="302dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_city"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ShippingAdd" />

    <Button
        android:id="@+id/btn_Delivery_Del"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:backgroundTint="#54626F"
        android:onClick="DeleteData"
        android:text="@string/btn_Delivery_Del"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Delivery_Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_Delivery_Edit" />

    <Button
        android:id="@+id/btn_Delivery_Edit"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#36454F"
        android:onClick="UpdateData"
        android:text="@string/btn_Delivery_Edit"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_Delivery_Del"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Delivery_View" />

    <Button
        android:id="@+id/btn_Delivery_Confirm"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:onClick="moveToDisplayDelivery"
        android:text="@string/btn_Delivery_Confirm"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Delivery_Del" />

    <Button
        android:id="@+id/btn_Delivery_View"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="#8F9779"
        android:onClick="ViewData"
        android:text="@string/btn_Delivery_View"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city" />

    <Button
        android:id="@+id/btn_bkto_main"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#B2BEB5"
        android:onClick="backToMainDelivery"
        android:text="@string/btn_bkto_main"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_info" />


</androidx.constraintlayout.widget.ConstraintLayout>